<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_rgb_transform</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ibrahim@qltyss.com">ibrahim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <depend>opencv</depend>
  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
